2002-03-06  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	* acconfig.h:
	* NEWS:
	* INSTALL.fvwm:
	* fvwm/fvwm.c (main):
	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/add_window.c (free_text_property):
	(get_name_property):
	COMPOUND_TEXT text properties are converted with
	XmbTextPropertyToTextList even if multibyte is disabled. This feature
	can be disbaled with --disable-compound-text.

2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	(resize_window):
	* fvwm/virtual.c (HandlePaging):
	moving/resizing windows opaque is much faster

2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	updated for 2.4.6

	* FvwmScript/Instructions.c (InitCom):
	(MyWarpPointer):
	fixed a compile problem on dec-osf5

	* fvwm/add_window.c (resize_resize_handle_windows):
	(change_resize_handle_windows):
	(setup_window_font):
	fixed changing the handlewidth style

2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_Pick):
	fixed a memory leak
	allow to pick windows that have CirculateSkip set

	* acinclude.m4:
	disabled a destructing gnome_prefix logic

	* fvwm/fvwm2.1 (Example):
	corrected statement about CaptureHonorsStartsOnPage being the default

2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_ResizeMove):
	windows are mo longer hilighted after ResizeMove

2002-02-28  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	fixed syntax line of Maximize

2002-02-27  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/commands.h:
	* fvwm/conditional.c (CMD_This):
	* fvwm/functions.c:
	* fvwm/functions.h:
	* fvwm/fvwm2.1:
	* NEWS:
	added new conditional command This

2002-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* acinclude.m4 (smr_CHECK_LIB):
	fixed a bug with variable expansion and autoconf cache values

2002-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed a problem with keyboard movement vs. EdgeResistance
