@@ -1,6 +1,10 @@
-Fvwm 2.4.6 is a maintenance release for 2.4.5.  It fixes a number
-of minor or rare problems.  If you did not encounter any of the
-problems below, you do not need to upgrade.
+Fvwm 2.4.6 is a maintenance release for 2.4.5.  Apart from fixing
+a number of minor or rare problems, it addresses slow opaque window
+movement and resizing that was not encountered in the 2.2.x
+releases.  If yo do not use opaque window movement or resizing and
+did not encounter any of the bugs described below you do not need
+to upgrade.  System administrators are strongly encouraged to
+install 2.4.6.
 
 The release is available at the fvwm home page: http://www.fvwm.org/
 
@@ -8,11 +12,16 @@ The release is available at the fvwm home page: http://www.fvwm.org/
 New Features:
 -------------
 
-* New conditional command This.
+* New conditional command ThisWindow.
+
+* Better support of non ISO-8859-1 window and icon titles. See the
+  --disable-compound-text option in INSTALL.fvwm for more details.
 
 
 Bug fixes:
 ----------
+
+* Improved speed of opaque window movement/resizing.
 
 * Fixed a bug that caused windows not being raised and lowered
   properly.
@@ -48,3 +57,6 @@ Bug fixes:
 
 * The window handles are now resizes as they should when the
   HandleWidth style changes.
+
+* The Circulate command does not select a random window when no
+  window has the focus.
