@@ -1,3 +1,15 @@
+2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/conditional.c (CMD_ThisWindow):
+	* fvwm/commands.h:
+	* fvwm/functions.h (enum):
+	* fvwm/functions.c (func_config):
+	* fvwm/fvwm2.1 (Examples):
+	renamed command "This" to "ThisWindow"
+
+	* fvwm/conditional.c (Circulate):
+	"Current" no longer selects a random window when no window is focused
+
 2002-03-06  olicha  <olivier.chapuis@free.fr>
 
 	* configure.in:
